crates/texlab/tests/lsp/text_document/snapshots/lsp__text_document__document_link__document_import.snap
---
source: crates/texlab/tests/lsp/text_document/document_link.rs
expression: "find_links(r#\"\n%! foo.tex\n\\import{.}{bar/baz}\n|\n\n%! bar/baz.tex\"#)"
---
[
  {
    "range": {
      "start": {
        "line": 0,
        "character": 11
      },
      "end": {
        "line": 0,
        "character": 18
      }
    },
    "target": "redacted://bar/baz.tex"
  }
]
