crates/texlab/tests/lsp/text_document/snapshots/lsp__text_document__document_link__document_include.snap
---
source: crates/texlab/tests/lsp/text_document/document_link.rs
expression: "find_links(r#\"\n%! foo.tex\n\\input{bar.tex}\n|\n\n%! bar.tex\"#)"
---
[
  {
    "range": {
      "start": {
        "line": 0,
        "character": 7
      },
      "end": {
        "line": 0,
        "character": 14
      }
    },
    "target": "redacted://bar.tex"
  }
]
